force-app/main/default/objects/Sales_Receipt__c/Sales_Receipt__c.object-meta.xml
<CustomObject>
    <label>Sales Receipt</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Sales Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>