force-app/main/default/objects/Sales_Receipt__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Value set by default from QB. Any value populated manually will be overwritten by value from QB</description>
    <inlineHelpText>Value set by default from QB. Any value populated manually will be overwritten by value from QB</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>