force-app/main/default/objects/Sales_Receipt__c/fields/Bill_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_Address__c</fullName>
    <label>Bill Address</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>