force-app/main/default/objects/Sales_Receipt__c/fields/Bill_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_Email_Address__c</fullName>
    <label>Bill Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>