force-app/main/default/objects/Sales_Receipt__c/fields/Currency_Ref__c.field-meta.xml
<CustomField>
    <fullName>Currency_Ref__c</fullName>
    <label>Currency Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>