force-app/main/default/objects/Sales_Receipt__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Receipts</relationshipLabel>
    <relationshipName>Sales_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>