force-app/main/default/objects/Sales_Receipt__c/fields/Customer_Memo__c.field-meta.xml
<CustomField>
    <fullName>Customer_Memo__c</fullName>
    <label>Customer Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>