force-app/main/default/objects/Sales_Receipt__c/fields/Customer_Ref__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ref__c</fullName>
    <label>Customer Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>