force-app/main/default/objects/Sales_Receipt__c/fields/DepositToAccountRef__c.field-meta.xml
<CustomField>
    <fullName>DepositToAccountRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DepositToAccountRef</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Receipts (DepositToAccountRef)</relationshipLabel>
    <relationshipName>Deposit_to_Account</relationshipName>
    <type>Lookup</type>
</CustomField>