force-app/main/default/objects/Sales_Receipt__c/fields/Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>Doc_Number__c</fullName>
    <label>Doc Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>