force-app/main/default/objects/Sales_Receipt__c/fields/Free_Form_Address__c.field-meta.xml
<CustomField>
    <fullName>Free_Form_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Form Address</label>
    <type>Checkbox</type>
</CustomField>