force-app/main/default/objects/Sales_Receipt__c/fields/Global_Tax_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Global_Tax_Calculation__c</fullName>
    <label>Global Tax Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>