force-app/main/default/objects/Sales_Receipt__c/fields/Home_Balance__c.field-meta.xml
<CustomField>
    <fullName>Home_Balance__c</fullName>
    <label>Home Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>