force-app/main/default/objects/Sales_Receipt__c/fields/Home_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Home_Total_Amount__c</fullName>
    <label>Home Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>