force-app/main/default/objects/Sales_Receipt__c/fields/Payment_Method_ref__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_ref__c</fullName>
    <label>Payment Method ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>