force-app/main/default/objects/Sales_Receipt__c/fields/Payment_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ref_Number__c</fullName>
    <label>Payment Ref Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>