force-app/main/default/objects/Sales_Receipt__c/fields/Private_Notes__c.field-meta.xml
<CustomField>
    <fullName>Private_Notes__c</fullName>
    <label>Private Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>