force-app/main/default/objects/Sales_Receipt__c/fields/Ship_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_Address__c</fullName>
    <label>Ship Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>