force-app/main/default/objects/Sales_Receipt__c/fields/Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>Sync_Token__c</fullName>
    <label>Sync Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>