force-app/main/default/objects/Sales_Receipt__c/fields/Total_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt__c</fullName>
    <label>Total Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>