force-app/main/default/objects/Sales_Receipt__c/fields/Total_tax__c.field-meta.xml
<CustomField>
    <fullName>Total_tax__c</fullName>
    <label>Total tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>